Create JAR file build system with Maven, scripts, and documentation
Co-authored-by: Ansh-Patoliya <211376159+Ansh-Patoliya@users.noreply.github.com>